@@ -120,6 +120,8 @@ export(getObservedCoef)
 export(multivariate_BinEnsemble)
 export(calBinProb)
 export(predict.LogitCalPred)
+export(StrataFit)
+export(predict.StrataFit)
 
 useDynLib(FRESA.CAD,.registration = TRUE, .fixes = "C_")
 
@@ -146,6 +148,7 @@ S3method(predict, FRESA_BESS)
 S3method(predict, FRESA_FILTERFIT) 
 S3method(predict, BAGGS) 
 S3method(predict, LogitCalPred) 
+S3method(predict, StrataFit) 
 
 
 importFrom(Rcpp, evalCpp)
